--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -30,3 +30,11 @@
   color: red;
   font-size: 12px;
 }
+
+.inputArea {
+  border: 1px solid gray;
+  border-radius: 5px;
+  width: 350px;
+  height: 20px;
+  padding: 5px;
+}
