--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   gap: 10px;
   border: solid 1px black;
+  border-radius: 10px;
   padding: 20px;
   width: 400px;
   height: auto;
